<resources>
   <string name="app_name">Die Lauf-App</string>
   <string name="app_description">Ein Kalorienrechner für LäuferInnen</string>
   <string name="action_settings">Settings</string>
   <string name="main_text">Geben Sie die zurückgelegte Strecke, die benötigte Zeit und Ihre Pausen ein. \n
   Die APP berechnet daraus Ihre Geschwindingkeit und schätzt die verbrannten Kalorien</string>
   <string name="text_distance">Zurückgelegte Strecke</string>
   <string name="text_time">Benötigte Zeit</string>
   <string name="text_breaktime">Pausen</string>
   <string name="text_button">zu den Ergebnissen</string>


   <string name="text_distance_label">Distanz (km)</string>
   <string name="text_pace_label">Pace (min/km)</string>
   <string name="text_kalorien_label">Kalorien (kcal)</string>

</resources>
