<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="381dp"
        android:layout_height="689dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="20sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_description"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/main"
            android:text="@string/main_text"
            android:layout_width="370dp"
            android:layout_height="127dp"
            android:layout_marginTop="20dp" />

        <TableLayout
            android:layout_width="370dp"
            android:layout_height="252dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/textview_distance"
                    android:layout_width="156dp"
                    android:layout_height="wrap_content"
                    android:text="@string/text_distance"/>

                <EditText
                    android:id="@+id/distance"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textview_time"
                    android:text="@string/text_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                     />

                <EditText
                    android:id="@+id/time"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="numberDecimal" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <TextView
                    android:id="@+id/textview_breaktime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_breaktime" />

                <EditText
                    android:id="@+id/breakTime"
                    android:layout_width="wrap_content"
                    android:layout_height="60dp"
                    android:layout_marginTop="20dp"
                    android:ems="10"
                    android:inputType="number" />
            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_button" />

    </LinearLayout>

</LinearLayout>